pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-unknown-field.ub
factory: {
  state-moves: [
    { from: resource.old, to: resource.new, reason: 'rename' }
  ]
}
